# FollowGameEngine

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
common/: MyLogger.cpp  MyLogger.h
hazel/: Application.cpp  Application.h  ApplicationEvent.h  Buffer.cpp  Buffer.h  Core.h  EntryPoint.h  Event.h  GraphicsContext.h  Hazel.cpp  Hazel.h  ImguiLayer.cpp  ImguiLayer.h  Input.h  KeyCodes.h  KeyEvent.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  MacInput.cpp  MacInput.h  MacWindow.cpp  MacWindow.h  MouseCodes.h  MouseEvent.h  OpenGLArrayVertex.cpp  OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.h  OrthoGraphicCamera.cpp  OrthoGraphicCamera.h  (+15 more)
hazel/Renderer/: RenderCommand.h  Renderer.cpp  Renderer.h  RendererAPI.h  Texture.cpp  Texture.h
hazel/imgui/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
playground/: Playground.h  main.cpp
playground/assets/shaders/: FlatColorShader.glsl  TextureShader.glsl
sandbox/: main.cpp
